# AIL-sensory-fair

./: README.md  Sensory v1  - sensoryfair_v1.csv  findings.md  llm_feature_tagging_openai.ipynb  llm_feature_tags.csv  llm_feature_tags.jsonl  llm_tagging_openai.ipynb  pyproject.toml  scraping.ipynb  sensoryfair_adaptive_clothing.csv
.ipynb_checkpoints/: llm_feature_tagging_openai-checkpoint.ipynb
.virtual_documents/: llm_tagging_openai.ipynb
Scraping/: Structure.ipynb  scraping.ipynb
Scraping/scrapes/: sensoryfair_v1.csv
data/raw/: .gitkeep
notebooks/: 01_eda_joined_reviews.ipynb  02_eda_full_dataset.ipynb
outputs/sensory_analysis/: Amazon_Fashion_sensory_analysis_report.md
src/: 01_create_dev_sample.py  02_build_duckdb.py  04_create_sensory_subset.ipynb  05_sensory_analysis_report.ipynb  config.py
src/.ipynb_checkpoints/: 00_check_local_files-checkpoint.py  02_build_duckdb-checkpoint.py  03_create_full_dataset-checkpoint.py  config-checkpoint.py
